# fastside

./: .editorconfig  .envrc  .gitignore  Cargo.toml  README.md  config.yml  data.json  flake.nix  fly.toml  instances.yml  services.json  shell.nix
.github/workflows/: ci.yml  update_data.yml
docs/: README.md  actualizer.md  api.md  architecture.md  configuration.md  crawler.md  deployment.md  services-file.md  user-config.md
fastside/: Cargo.toml
fastside-actualizer/: Cargo.toml
fastside-actualizer/src/: main.rs  serde_types.rs  types.rs
fastside-actualizer/src/services/: akademik.rs  breezewiki.rs  default.rs  default_checker.rs  fastside.rs  gothub.rs  invidious.rs  kittygram.rs  koub.rs  libreddit.rs  libredirect.rs  librex.rs  mod.rs  scribe.rs  searx.rs  searxng.rs  simplytranslate.rs  soprano.rs  tent.rs  translite.rs
fastside-actualizer/src/utils/: log_err.rs  mod.rs  normalize.rs  tags.rs  url.rs
fastside-cloudflare/: Cargo.toml  package-lock.json  package.json  wrangler.toml
fastside-cloudflare/src/: lib.rs
fastside-core/: Cargo.toml
fastside-core/src/: crawler.rs  errors.rs  lib.rs  search.rs  stub_crawler.rs  types.rs
fastside-core/src/routes/: api.rs  config.rs  index.rs  mod.rs  redirect.rs
fastside-core/src/utils/: user_config.rs
fastside-core/templates/: cached_redirect.html  configure.html  fallback_redirect.html  history_redirect.html  index.html
fastside-shared/: Cargo.toml
fastside-shared/src/: client_builder.rs  config.rs  errors.rs  lib.rs  parallel.rs  serde_types.rs
fastside/src/: crawler.rs  errors.rs  filters.rs  main.rs  search.rs  types.rs
fastside/src/routes/: api.rs  config.rs  index.rs  mod.rs  redirect.rs
fastside/src/utils/: parallel.rs  user_config.rs
fastside/templates/: configure.html  index.html
src/: config.rs  crawler.rs  errors.rs  filters.rs  log_setup.rs  main.rs  search.rs  serde_types.rs
src/routes/: api.rs  config.rs  index.rs  mod.rs  redirect.rs
src/utils/: mod.rs  user_config.rs
templates/: base.html  cached_redirect.html  configure.html  error.html  history_redirect.html  index.html
