[package]
name = "fastside"
description = "A smart redirecting gateway for various frontend services."
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.5.1", features = [
  "macros",
], default-features = false } # web framework
askama = "0.12.1" # templating engine
reqwest = { version = "0.12.4", default-features = false, features = [
  "rustls-tls",
  "http2",
] } # http client

clap = { version = "4.5.4", features = ["derive"] }    # cli
config = "0.14.0"                                      # config
serde = { version = "1.0.201", features = ["derive"] } # serialization
serde_json = "1.0.117"                                 # serialization
serde_qs = "0.13.0"                                    # serialization
url = { version = "2.5.0", features = ["serde"] }      # url
log = "0.4.21"                                         # logging
pretty_env_logger = "0.5.0"                            # logging
anyhow = "1.0.83"                                      # error
thiserror = "1.0.60"                                   # error
tokio = { version = "1.37.0", features = ["full"] }    # async
futures = "0.3.30"                                     # async
num_cpus = "1.16.0"                                    # get number of cpus
rand = "0.8.5"                                         # random
chrono = "0.4.38"                                      # datetime

[profile.release]
overflow-checks = true
incremental = false
codegen-units = 1
opt-level = 3
debug = "full"
strip = true
lto = true
