[package]
name = "fastside-actualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
fastside-shared = { path = "../fastside-shared" }

reqwest = { version = "0.13.2", default-features = false, features = [
  "rustls",
  "http2",
] } # http client

tokio = { version = "1.49.0", features = ["full"] }    # async
async-std-resolver = "0.24.4"                          # async dns resolver
clap = { version = "4.5.60", features = ["derive"] }    # cli
anyhow = "1.0.102"                                      # error
serde = { version = "1.0.228", features = ["derive"] } # serialization
serde_yaml = "0.9.34"                                  # serialization
url = { version = "2.5.8", features = ["serde"] }      # url
serde_json = "1.0.149"                                 # serialization
log = "0.4.29"                                         # logging
async-trait = "0.1.89"                                 # async trait
chrono = "0.4.44"                                      # datetime
regex = "1.12.3"                                       # regex
ipnet = "2.11.0"                                        # ip utils
