[package]
name = "fastside-cloudflare"
description = "A smart redirecting gateway for various frontend services. Cloudflare Worker specific version."
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fastside-shared = { path = "../fastside-shared" }
fastside-core = { path = "../fastside-core" }

axum = { version = "0.7.9", default-features = false } # web framework
# askama = "0.12.1" # templating engine
# reqwest = { version = "0.12.4", default-features = false, features = [
#   "rustls-tls",
#   "http2",
#   "socks",
# ] } # http client

# clap = { version = "4.5.4", features = ["derive"] }    # cli
# serde = { version = "1.0.201", features = ["derive"] } # serialization
# serde_json = "1.0.117"                                 # serialization
# url = { version = "2.5.0", features = ["serde"] }      # url
# log = "0.4.21"                                         # logging
# anyhow = "1.0.83"                                      # error
# thiserror = "1.0.60"                                   # error
# tokio = { version = "1.37.0", features = ["full"] }    # async
# futures = "0.3.30"                                     # async
# num_cpus = "1.16.0"                                    # get number of cpus
# rand = "0.8.5"                                         # random
# chrono = "0.4.38"                                      # datetime
# time = "0.3.36"                                        # time offsets
# regex = "1.10.5"                                       # regex
# base64 = "0.22.1"                                      # base64
# urlencoding = "2.1.3"                                  # url encoding

worker = { version = "0.4.2", features = ["http", "axum"] }
worker-macros = { version = "0.4.2", features = ["http"] }
# axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }
# tracing = "0.1.40"
wasm-bindgen-futures = "0.4"
tower-service = "0.3.3"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
tokio = { version = "1.41.1", default-features = false, features = ["sync"] }
serde = "1.0.215"
serde_json = "1.0.132"
reqwest = "0.12.9"

# [features]
# default = []
# worker = ["dep:worker", "worker-macros"]
