[package]
name = "fastside-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.201", features = ["derive"] } # serialization
serde_json = "1.0.117"                                 # serialization
url = { version = "2.5.0", features = ["serde"] }      # url
base64 = "0.22.1"                                      # base64
thiserror = "1.0.60"                                   # error
