[package]
name = "fastside-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", default-features = false, features = [
  "rustls-tls",
  "http2",
  "socks",
] } # http client

serde = { version = "1.0.201", features = ["derive"] }   # serialization
serde_json = "1.0.117"                                   # serialization
url = { version = "2.5.0", features = ["serde"] }        # url
base64 = "0.22.1"                                        # base64
thiserror = "1.0.60"                                     # error
config = "0.14.0"                                        # config
anyhow = "1.0.83"                                        # error
log = "0.4.21"                                           # logging
pretty_env_logger = "0.5.0"                              # logging
tokio = { version = "1.39.3", default-features = false, features = ["rt", "time"]} # async
num_cpus = "1.16.0"                                      # get number of cpus
regex = "1.10.5"                                         # regex
