[package]
name = "fastside-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = [
  "rustls",
  "http2",
] } # http client

serde = { version = "1.0.228", features = ["derive"] } # serialization
serde_json = "1.0.149"                                 # serialization
url = { version = "2.5.8", features = ["serde"] }      # url
base64 = "0.22.1"                                      # base64
thiserror = "1.0.69"                                   # error
config = "0.15.19"                                      # config
anyhow = "1.0.102"                                      # error
log = "0.4.29"                                         # logging
pretty_env_logger = "0.5.0"                            # logging
tokio = "1.49.0"                                       # async
num_cpus = "1.17.0"                                    # get number of cpus
regex = "1.12.3"                                       # regex
