[package]
name = "fastside"
description = "A smart redirecting gateway for various frontend services."
version = "0.2.0"
edition = "2021"
default-run = "fastside"

[dependencies]
fastside-shared = { path = "../fastside-shared" }

actix-web = { version = "4.5.1", features = [
  "macros",
  "cookies",
], default-features = false } # web framework
askama = "0.12.1" # templating engine
reqwest = { version = "0.12.4", default-features = false, features = [
  "rustls-tls",
  "http2",
  "socks",
] } # http client

clap = { version = "4.5.4", features = ["derive"] }    # cli
serde = { version = "1.0.201", features = ["derive"] } # serialization
serde_json = "1.0.117"                                 # serialization
url = { version = "2.5.0", features = ["serde"] }      # url
log = "0.4.21"                                         # logging
anyhow = "1.0.83"                                      # error
thiserror = "1.0.60"                                   # error
tokio = { version = "1.43.1", features = ["full"] }    # async
futures = "0.3.30"                                     # async
num_cpus = "1.16.0"                                    # get number of cpus
rand = "0.8.5"                                         # random
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.36"                                        # time offsets
regex = "1.10.5"                                       # regex
base64 = "0.22.1"                                      # base64
urlencoding = "2.1.3"                                  # url encoding
