[package]
name = "fastside"
description = "A smart redirecting gateway for various frontend services."
version = "0.2.0"
edition = "2024"
default-run = "fastside"

[dependencies]
fastside-shared = { path = "../fastside-shared" }

actix-web = { version = "4.13.0", features = [
  "macros",
  "cookies",
], default-features = false } # web framework
askama = "0.15.4" # templating engine
reqwest = { version = "0.13.2", default-features = false, features = [
  "rustls",
  "http2",
  "socks",
] } # http client

clap = { version = "4.5.60", features = ["derive"] }    # cli
serde = { version = "1.0.228", features = ["derive"] } # serialization
serde_json = "1.0.149"                                 # serialization
url = { version = "2.5.8", features = ["serde"] }      # url
log = "0.4.29"                                         # logging
anyhow = "1.0.102"                                      # error
thiserror = "2.0.18"                                   # error
tokio = { version = "1.49.0", features = ["full"] }    # async
futures = "0.3.32"                                     # async
num_cpus = "1.17.0"                                    # get number of cpus
rand = "0.10.0"                                         # random
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.47"                                        # time offsets
regex = "1.12.3"                                       # regex
base64 = "0.22.1"                                      # base64
urlencoding = "2.1.3"                                  # url encoding
